# wisp

./: .gitignore  README.md  Wisp_Product_Spec.md  apple_ui_ux_guideline.md  renovate.json
.github/workflows/: ci.yml  headroom-bump-gate.yml
agent/: Dockerfile  pyproject.toml
agent-ui-macos/: README.md  project.yml
agent-ui-macos/WispMenuBar/: GlanceModel.swift  GlanceView.swift  WispMenuBarApp.swift
agent-ui-macos/WispMenuBar.xcodeproj/: project.pbxproj
agent/scripts/: export_telemetry_fixture.py  pilot_verify.py
agent/tests/: test_billing.py  test_config.py  test_main_metering.py  test_metering.py  test_policy.py  test_rate_card_parity.py  test_stats_adapter.py  test_telemetry.py
agent/tests/fixtures/: headroom_schemas.json
agent/wisp_agent/: __init__.py  __main__.py  billing.py  config.py  local_stats.py  metering_state.py  policy.py  proxy_supervisor.py  rate_card.py  stats_adapter.py  telemetry.py
design/: principles.md  review-checklist.md  tokens.json
docs/: APPLE_SIGNING.md  CURSOR_GOLIVE_PROMPT.md  HANDOFFS.md  MDM_PILOT_RUNBOOK.md  PROD_READINESS.md  SECURITY_AUTOMATED_REVIEW.md
evals/: run_evals.py  thresholds.yaml
evals/corpus/: api_response.json  build_logs.json  json_pricing.json  logs_stacktrace.json  source_code.json  tool_output.json  (+1 more)
licenses/: headroom-NOTICE
saas/: .env.example  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  sentry.server.config.ts  tailwind.config.ts  vitest.config.ts
scripts/: LINEAR_BACKLOG.md  apply_supabase.sh  setup_stripe.mjs
supabase/: seed.sql
(+89 files in other folders)
